k8s/observabilidade/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    # Grafana — único serviço exposto externamente
    # Prometheus e Alertmanager ficam internos ao cluster por segurança
    - host: grafana.hospital-amazonas-pires.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
